// Copyright 2022 The template Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package memtable;

service MemtableService {
	rpc ListKV (ListKVRequest) returns (ListKVResponse);
	rpc UpdateKV (UpdateKVRequest) returns (UpdateKVResponse);
}

message ListKVRequest {
  string tenant = 1;
  uint64 seq = 2;
  string key = 3;
}

message ListKVResponse {
  string value = 1;
}

enum ValueType {
  NormalValue = 0;
  Deletion = 1;
  Unknown = 2;
}

message UpdateKVRequest {
  string tenant = 1;
  uint64 seq = 2;
  ValueType value_type = 3;
  string key = 4;
  optional string value = 5;
}

message UpdateKVResponse {
	string tenant = 1;
  uint64 seq = 2;
  ValueType value_type = 3;
	bool ack = 4;
}

